TigerLLKParser.java
// Generated from TigerLLK.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TigerLLKParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, MAIN=3, COMMA=4, COLON=5, SEMI=6, LPAREN=7, RPAREN=8, 
		LBRACK=9, RBRACK=10, LBRACE=11, RBRACE=12, PERIOD=13, PLUS=14, MINUS=15, 
		MULT=16, DIV=17, EXP=18, EQ=19, NEQ=20, LESSER=21, GREATER=22, LESSEREQ=23, 
		GREATEREQ=24, AND=25, OR=26, ASSIGN=27, ARRAY=28, RECORD=29, BREAK=30, 
		DO=31, ELSE=32, FOR=33, FUNC=34, IF=35, IN=36, LET=37, OF=38, THEN=39, 
		TO=40, TYPE=41, VAR=42, WHILE=43, ENDIF=44, BEGIN=45, ENDDO=46, END=47, 
		RETURN=48, INTLIT=49, FLOATLIT=50, ID=51, WS=52;
	public static final int
		RULE_hello = 0, RULE_tigerprogram = 1, RULE_declarationsegment = 2, RULE_typedeclarationlist = 3, 
		RULE_vardeclarationlist = 4, RULE_functdeclarationlist = 5, RULE_typedeclaration = 6, 
		RULE_type = 7, RULE_fieldlist = 8, RULE_typeid = 9, RULE_vardeclaration = 10, 
		RULE_idlist = 11, RULE_itail = 12, RULE_optionalinit = 13, RULE_functdeclaration = 14, 
		RULE_paramlist = 15, RULE_paramlisttail = 16, RULE_rettype = 17, RULE_param = 18, 
		RULE_statseq = 19, RULE_stail = 20, RULE_stat = 21, RULE_statail = 22, 
		RULE_more = 23, RULE_ltail = 24, RULE_expr = 25, RULE_and = 26, RULE_le = 27, 
		RULE_me = 28, RULE_lesser = 29, RULE_greater = 30, RULE_noteq = 31, RULE_equal = 32, 
		RULE_minus = 33, RULE_plus = 34, RULE_div = 35, RULE_mult = 36, RULE_exp = 37, 
		RULE_yeet = 38, RULE_consta = 39, RULE_exprlist = 40, RULE_exprlisttail = 41, 
		RULE_lvalue = 42, RULE_lvaluetail = 43;
	public static final String[] ruleNames = {
		"hello", "tigerprogram", "declarationsegment", "typedeclarationlist", 
		"vardeclarationlist", "functdeclarationlist", "typedeclaration", "type", 
		"fieldlist", "typeid", "vardeclaration", "idlist", "itail", "optionalinit", 
		"functdeclaration", "paramlist", "paramlisttail", "rettype", "param", 
		"statseq", "stail", "stat", "statail", "more", "ltail", "expr", "and", 
		"le", "me", "lesser", "greater", "noteq", "equal", "minus", "plus", "div", 
		"mult", "exp", "yeet", "consta", "exprlist", "exprlisttail", "lvalue", 
		"lvaluetail"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'int'", "'float'", "'main'", "','", "':'", "';'", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "'.'", "'+'", "'-'", "'*'", "'/'", "'**'", 
		"'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'&'", "'|'", "':='", "'array'", 
		"'record'", "'break'", "'do'", "'else'", "'for'", "'function'", "'if'", 
		"'in'", "'let'", "'of'", "'then'", "'to'", "'type'", "'var'", "'while'", 
		"'endif'", "'begin'", "'enddo'", "'end'", "'return'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INT", "FLOAT", "MAIN", "COMMA", "COLON", "SEMI", "LPAREN", "RPAREN", 
		"LBRACK", "RBRACK", "LBRACE", "RBRACE", "PERIOD", "PLUS", "MINUS", "MULT", 
		"DIV", "EXP", "EQ", "NEQ", "LESSER", "GREATER", "LESSEREQ", "GREATEREQ", 
		"AND", "OR", "ASSIGN", "ARRAY", "RECORD", "BREAK", "DO", "ELSE", "FOR", 
		"FUNC", "IF", "IN", "LET", "OF", "THEN", "TO", "TYPE", "VAR", "WHILE", 
		"ENDIF", "BEGIN", "ENDDO", "END", "RETURN", "INTLIT", "FLOATLIT", "ID", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TigerLLK.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TigerLLKParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class HelloContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(TigerLLKParser.PLUS, 0); }
		public TerminalNode TYPE() { return getToken(TigerLLKParser.TYPE, 0); }
		public TerminalNode VAR() { return getToken(TigerLLKParser.VAR, 0); }
		public TerminalNode WHILE() { return getToken(TigerLLKParser.WHILE, 0); }
		public TerminalNode END() { return getToken(TigerLLKParser.END, 0); }
		public HelloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hello; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitHello(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HelloContext hello() throws RecognitionException {
		HelloContext _localctx = new HelloContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_hello);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(PLUS);
				setState(89);
				match(TYPE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(PLUS);
				setState(91);
				match(VAR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				match(PLUS);
				setState(93);
				match(WHILE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				match(PLUS);
				setState(95);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TigerprogramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(TigerLLKParser.MAIN, 0); }
		public TerminalNode LET() { return getToken(TigerLLKParser.LET, 0); }
		public DeclarationsegmentContext declarationsegment() {
			return getRuleContext(DeclarationsegmentContext.class,0);
		}
		public TerminalNode IN() { return getToken(TigerLLKParser.IN, 0); }
		public TerminalNode BEGIN() { return getToken(TigerLLKParser.BEGIN, 0); }
		public StatseqContext statseq() {
			return getRuleContext(StatseqContext.class,0);
		}
		public TerminalNode END() { return getToken(TigerLLKParser.END, 0); }
		public TigerprogramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tigerprogram; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitTigerprogram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TigerprogramContext tigerprogram() throws RecognitionException {
		TigerprogramContext _localctx = new TigerprogramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tigerprogram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(MAIN);
			setState(99);
			match(LET);
			setState(100);
			declarationsegment();
			setState(101);
			match(IN);
			setState(102);
			match(BEGIN);
			setState(103);
			statseq();
			setState(104);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsegmentContext extends ParserRuleContext {
		public TypedeclarationlistContext typedeclarationlist() {
			return getRuleContext(TypedeclarationlistContext.class,0);
		}
		public VardeclarationlistContext vardeclarationlist() {
			return getRuleContext(VardeclarationlistContext.class,0);
		}
		public FunctdeclarationlistContext functdeclarationlist() {
			return getRuleContext(FunctdeclarationlistContext.class,0);
		}
		public DeclarationsegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationsegment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitDeclarationsegment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsegmentContext declarationsegment() throws RecognitionException {
		DeclarationsegmentContext _localctx = new DeclarationsegmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarationsegment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			typedeclarationlist();
			setState(107);
			vardeclarationlist();
			setState(108);
			functdeclarationlist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedeclarationlistContext extends ParserRuleContext {
		public TypedeclarationContext typedeclaration() {
			return getRuleContext(TypedeclarationContext.class,0);
		}
		public TypedeclarationlistContext typedeclarationlist() {
			return getRuleContext(TypedeclarationlistContext.class,0);
		}
		public TypedeclarationlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedeclarationlist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitTypedeclarationlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypedeclarationlistContext typedeclarationlist() throws RecognitionException {
		TypedeclarationlistContext _localctx = new TypedeclarationlistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typedeclarationlist);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				typedeclaration();
				setState(111);
				typedeclarationlist();
				}
				break;
			case FUNC:
			case IN:
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclarationlistContext extends ParserRuleContext {
		public VardeclarationContext vardeclaration() {
			return getRuleContext(VardeclarationContext.class,0);
		}
		public VardeclarationlistContext vardeclarationlist() {
			return getRuleContext(VardeclarationlistContext.class,0);
		}
		public VardeclarationlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclarationlist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitVardeclarationlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardeclarationlistContext vardeclarationlist() throws RecognitionException {
		VardeclarationlistContext _localctx = new VardeclarationlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vardeclarationlist);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				vardeclaration();
				setState(117);
				vardeclarationlist();
				}
				break;
			case FUNC:
			case IN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctdeclarationlistContext extends ParserRuleContext {
		public FunctdeclarationContext functdeclaration() {
			return getRuleContext(FunctdeclarationContext.class,0);
		}
		public FunctdeclarationlistContext functdeclarationlist() {
			return getRuleContext(FunctdeclarationlistContext.class,0);
		}
		public FunctdeclarationlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functdeclarationlist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitFunctdeclarationlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctdeclarationlistContext functdeclarationlist() throws RecognitionException {
		FunctdeclarationlistContext _localctx = new FunctdeclarationlistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functdeclarationlist);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNC:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				functdeclaration();
				setState(123);
				functdeclarationlist();
				}
				break;
			case IN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedeclarationContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(TigerLLKParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(TigerLLKParser.ID, 0); }
		public TerminalNode EQ() { return getToken(TigerLLKParser.EQ, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerLLKParser.SEMI, 0); }
		public TypedeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitTypedeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypedeclarationContext typedeclaration() throws RecognitionException {
		TypedeclarationContext _localctx = new TypedeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typedeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(TYPE);
			setState(129);
			match(ID);
			setState(130);
			match(EQ);
			setState(131);
			type();
			setState(132);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayTypeContext extends TypeContext {
		public TerminalNode ARRAY() { return getToken(TigerLLKParser.ARRAY, 0); }
		public TerminalNode LBRACK() { return getToken(TigerLLKParser.LBRACK, 0); }
		public TerminalNode INTLIT() { return getToken(TigerLLKParser.INTLIT, 0); }
		public TerminalNode RBRACK() { return getToken(TigerLLKParser.RBRACK, 0); }
		public TerminalNode OF() { return getToken(TigerLLKParser.OF, 0); }
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public ArrayTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IDtypeContext extends TypeContext {
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public IDtypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitIDtype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PointerTypeContext extends TypeContext {
		public TerminalNode ID() { return getToken(TigerLLKParser.ID, 0); }
		public PointerTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitPointerType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RecordTypeContext extends TypeContext {
		public TerminalNode RECORD() { return getToken(TigerLLKParser.RECORD, 0); }
		public FieldlistContext fieldlist() {
			return getRuleContext(FieldlistContext.class,0);
		}
		public TerminalNode END() { return getToken(TigerLLKParser.END, 0); }
		public RecordTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitRecordType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
				_localctx = new IDtypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				typeid();
				}
				break;
			case ARRAY:
				_localctx = new ArrayTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				match(ARRAY);
				setState(136);
				match(LBRACK);
				setState(137);
				match(INTLIT);
				setState(138);
				match(RBRACK);
				setState(139);
				match(OF);
				setState(140);
				typeid();
				}
				break;
			case RECORD:
				_localctx = new RecordTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				match(RECORD);
				setState(142);
				fieldlist();
				setState(143);
				match(END);
				}
				break;
			case ID:
				_localctx = new PointerTypeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldlistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TigerLLKParser.ID, 0); }
		public TerminalNode COLON() { return getToken(TigerLLKParser.COLON, 0); }
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerLLKParser.SEMI, 0); }
		public FieldlistContext fieldlist() {
			return getRuleContext(FieldlistContext.class,0);
		}
		public FieldlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldlist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitFieldlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldlistContext fieldlist() throws RecognitionException {
		FieldlistContext _localctx = new FieldlistContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fieldlist);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				match(ID);
				setState(149);
				match(COLON);
				setState(150);
				typeid();
				setState(151);
				match(SEMI);
				setState(152);
				fieldlist();
				}
				break;
			case END:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeidContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(TigerLLKParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(TigerLLKParser.FLOAT, 0); }
		public TypeidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeid; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitTypeid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeidContext typeid() throws RecognitionException {
		TypeidContext _localctx = new TypeidContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typeid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(TigerLLKParser.VAR, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(TigerLLKParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public OptionalinitContext optionalinit() {
			return getRuleContext(OptionalinitContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerLLKParser.SEMI, 0); }
		public VardeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitVardeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardeclarationContext vardeclaration() throws RecognitionException {
		VardeclarationContext _localctx = new VardeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_vardeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(VAR);
			setState(160);
			idlist();
			setState(161);
			match(COLON);
			setState(162);
			type();
			setState(163);
			optionalinit();
			setState(164);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdlistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TigerLLKParser.ID, 0); }
		public ItailContext itail() {
			return getRuleContext(ItailContext.class,0);
		}
		public IdlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idlist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitIdlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdlistContext idlist() throws RecognitionException {
		IdlistContext _localctx = new IdlistContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_idlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(ID);
			setState(167);
			itail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItailContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(TigerLLKParser.COMMA, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public ItailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_itail; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TigerLLKVisitor ) return ((TigerLLKVisitor<? extends T>)visitor).visitItail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ItailContext itail() throws RecognitionException {
		ItailContext _localctx = new ItailContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_itail);
		try {
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				match(COMMA);
				setState(170);
				idlist();
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
